deployment-2-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-with-replicas
  labels:
    app: my-k8s-application
    env: prod
    owner: Saman
spec:
  replicas: 3
  selector:
    matchLabels:
      project: 2-group-pods
  template:
    metadata:
      labels:
        project: 2-group-pods
    spec:
      containers:
        - name: 2-group-web
          image: saman13/test:v1
          ports:
            - containerPort: 80
