deployment-3-autoscaling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-with-autoscaling
  labels:
    app: my-k8s-application #лейблы оч желательны
spec:
  replicas: 2 #колличество реплик
  selector: #с какими подами будет работать деплоймент
    matchLabels:
      app: my-web-deployment-with-autoscaling
  template: #описание самого пода
    metadata:
      labels:
        app: my-web-deployment-with-autoscaling
    spec:
      containers:
      - name: my-web-deployment
        image: saman13/test:v1
        ports:
        - containerPort: 80
