deployment-saman1-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app: my-k8s-application
spec:
  selector:
    matchLabels:
      project: 1-group-pods
  template:
    metadata:
      labels:
        project: 1-group-pods
    spec:
      containers:
        - name: web1
          image: saman13/test:v1
          ports:
            - containerPort: 80
